force-app/main/default/objects/Configrations__c/Configrations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WorkOrderInvoiceing</label>
</CustomObject>