force-app/main/default/objects/Configrations__c/fields/PlatformConfigration__c.field-meta.xml
<CustomField>
    <fullName>PlatformConfigration__c</fullName>
    <label>PlatformConfigration</label>
    <type>TextArea</type>
</CustomField>