force-app/main/default/objects/Configrations__c/fields/ProductField__c.field-meta.xml
<CustomField>
    <fullName>ProductField__c</fullName>
    <label>ProductField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>