force-app/main/default/objects/Configrations__c/fields/WOFieldset__c.field-meta.xml
<CustomField>
    <fullName>WOFieldset__c</fullName>
    <label>WOFieldset</label>
    <type>TextArea</type>
</CustomField>