force-app/main/default/objects/Configrations__c/fields/WOLIFieldset__c.field-meta.xml
<CustomField>
    <fullName>WOLIFieldset__c</fullName>
    <label>WOLIFieldset</label>
    <type>TextArea</type>
</CustomField>