force-app/main/default/objects/Configrations__c/fields/Work_Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Record_Type__c</fullName>
    <label>Work Order Record Type</label>
    <type>TextArea</type>
</CustomField>